--- a/02-Counter/index.html
+++ b/02-Counter/index.html
@@ -11,15 +11,16 @@
   <body>
     <main>
       <div class="container">
-        <h1>counter</h1>
+        <h1>Counter</h1>
         <span id="value">0</span>
-        <div class="button-container">
-          <button class="btn decrease">decrease</button>
-          <button class="btn reset">reset</button>
-          <button class="btn increase">increase</button>
+        <button class="btn" id="decrease">DECREASE</button>
+        <button class="btn" id="reset">RESET</button>
+        <button class="btn" id="increase">INCREASE</button>
         </div>
       </div>
     </main>
+    
+    
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
